[package]
name = "opaque_typedef"
version = "0.0.3"
authors = ["YOSHIOKA Takuma <tashioka.256@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Supports defining opaque typedefs"
repository = "https://github.com/lo48576/opaque_typedef"
keywords = ["derive", "opaque", "strong", "typedef"]

[dependencies]

[badges]
travis-ci = { repository = "lo48576/opaque_typedef" }
