[package]
name = "opaque_typedef_codegen"
version = "0.0.5"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Code generator to define opaque typedefs easily"
repository = "https://github.com/lo48576/opaque_typedef"
keywords = ["derive", "opaque", "strong", "typedef"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["extra-traits", "full"] }
