[package]
name = "opaque_typedef_macros"
version = "0.0.1"
authors = ["YOSHIOKA Takuma <tashioka.256@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
description = "Supports defining opaque typedefs"
repository = "https://github.com/lo48576/opaque_typedef"

[lib]
proc-macro = true

[dependencies]
quote = "^0.5"
strum = "^0.9"
strum_macros = "^0.9"
# `full` feature is required to parse closures.
syn = { version = "^0.13.1", features = ["full"] }

[badges]
travis-ci = { repository = "lo48576/opaque_typedef" }
